Partial_14Dec2021/force-app/main/default/objects/Inventory_Gift_Request__c/Inventory_Gift_Request__c.object-meta.xml
<CustomObject>
    <label>Inventory_Gift_Request</label>
    <nameField>
        <displayFormat>IGR-{000000}</displayFormat>
        <label>InventoryGiftRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory_Gift_Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>