Partial_14Dec2021/force-app/main/default/objects/Inventory_Gift_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Inventory_Gift_Requests</relationshipLabel>
    <relationshipName>Inventory_Gift_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>