Partial_14Dec2021/force-app/main/default/objects/Inventory_Gift_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter the Reason</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>