Partial_14Dec2021/force-app/main/default/objects/Inventory_Gift_Request__c/fields/Request_Raised_by__c.field-meta.xml
<CustomField>
    <fullName>Request_Raised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Gift_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>